--- a/core/templates/core/transaction_list.html
+++ b/core/templates/core/transaction_list.html
@@ -108,6 +108,10 @@
       <i class="fas fa-times-circle"></i> Clear Filters
     </button>
 
+    <button id="show-all-entries" class="btn btn-outline-info">
+      <i class="fas fa-list"></i> Show All Entries
+    </button>
+
     <div class="btn-group" role="group">
       <input type="checkbox" class="btn-check" id="bulk-select-mode" autocomplete="off">
       <label class="btn btn-outline-primary" for="bulk-select-mode">
@@ -145,8 +149,8 @@
           <th>Type</th>
           <th>Amount</th>
           <th class="d-none d-lg-table-cell">Category</th>
-          <th class="d-none d-xl-table-cell">Tags</th>
           <th class="d-none d-md-table-cell">Account</th>
+          <th class="d-none d-lg-table-cell">Tags</th>
           <th class="text-center" style="width: 100px;">Actions</th>
         </tr>
       </thead>
