--- a/core/templates/core/confirms/transaction_confirm_delete.html
+++ b/core/templates/core/confirms/transaction_confirm_delete.html
@@ -12,4 +12,4 @@ Are you sure you want to delete the transaction dated <strong>{{ object.date }}<
 
 {% block action_label %}🗑 Confirm Delete{% endblock %}
 
-{% block cancel_url %}{% url 'transaction_list' %}{% endblock %}
+{% block cancel_url %}{% url 'transaction_list_v2' %}{% endblock %}
