--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -43,8 +43,8 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'transaction_list' %}active{% endif %}"
-               href="{% url 'transaction_list' %}">
+            <a class="nav-link {% if request.resolver_match.url_name == 'transaction_list' or request.resolver_match.url_name == 'transaction_list_v2' %}active{% endif %}"
+               href="{% url 'transaction_list_v2' %}">
               <i class="bi bi-table me-1"></i> Transactions
             </a>
           </li>
