--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,6 +14,10 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="csrf-token" content="{{ csrf_token }}">
+
   {% block extra_head %}{% endblock %}
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
@@ -72,6 +76,12 @@
               <i class="bi bi-bank me-1"></i> Accounts
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'estimate_transactions' %}active{% endif %}"
+               href="{% url 'estimate_transactions' %}">
+              <i class="bi bi-calculator me-1"></i> Estimate Transactions
+            </a>
+          </li>
         </ul>
 
         <ul class="navbar-nav ms-auto">
@@ -120,11 +130,12 @@
   {% block content %}{% endblock %}
 </div>
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js" defer></script>
 <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js" defer></script>
 <script src="{% static 'js/main.js' %}" defer></script>
+</script>
 
 {% block extra_js %}{% endblock %}
 
