--- a/core/templates/core/account_list.html
+++ b/core/templates/core/account_list.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block title %}Accounts - OurFinanceTracker{% endblock %}
+
 {% block content %}
 <div class="container mt-4">
 
